<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="add_restaurant">Add Restaurant</string>
    <string name="app_name">Hours</string>
    <string name="cancel_button_label">CANCEL</string>
    <string name="connection_error">This app requires a network connection</string>
    <string name="connection_error_title">No network connection</string>
    <string name="content_desc_background_image">Background Image</string>
    <string name="content_desc_button_divider">Button Divider</string>
    <string name="content_desc_restaurant_image">Restaurant Image</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="edit_error_message">Only the original poster may edit this listing</string>
    <string name="edit_error_title">Edit Error</string>
    <string name="email_hint">Email</string>
    <string name="empty_view_text">Currently no restaurants, add some!</string>
    <string name="error_saving">There was an error saving</string>
    <string name="error_saving_title">Error Saving</string>
    <string name="external_storage_error">There was a problem accessing your device\'s external storage</string>
    <string name="friday_check_label">Friday</string>
    <string name="friday_short">F</string>
    <string name="general_error_title">Error</string>
    <string name="login_button_label">SIGN IN</string>
    <string name="login_error_message">Please make sure you enter a username and password!</string>
    <string name="login_error_title">Login Error</string>
    <string name="main_fragment_subtitle">Is It Open?</string>
    <string name="master_close_label">Close</string>
    <string name="master_hours_label">Set All Hours</string>
    <string name="master_open_label">Open</string>
    <string name="menu_all_restaurants_label">Show All Restaurants</string>
    <string name="menu_my_restaurants_label">My Restaurants</string>
    <string name="monday_check_label">Monday</string>
    <string name="monday_short">M</string>
    <string name="nav_drawer_added_this_week">Added This Week</string>
    <string name="nav_drawer_added_today">Added Today</string>
    <string name="nav_drawer_all_restaurants">All Restaurants</string>
    <string name="nav_drawer_home">Home</string>
    <string name="nav_drawer_my_restaurants">My Restaurants</string>
    <string name="nav_drawer_recently_updated">Recently Updated</string>
    <string name="nav_drawer_my_favorites">Favorites</string>
    <string name="nav_drawer_city">View by City</string>
    <string name="new_restaurant">New Restaurant</string>
    <string name="password_hint">Password</string>
    <string name="picture_button_label">New Picture</string>
    <string name="restaurant_address_hint">Enter Address</string>
    <string name="restaurant_address_label">Address</string>
    <string name="restaurant_notes_hint">Enter Notes Here</string>
    <string name="restaurant_notes_label">Notes</string>
    <string name="restaurant_phone_hint">Enter Phone Number</string>
    <string name="restaurant_phone_label">Phone Number</string>
    <string name="restaurant_picture_label">Picture</string>
    <string name="restaurant_title_hint">Enter Name</string>
    <string name="restaurant_title_label">Name</string>
    <string name="saturday_check_label">Saturday</string>
    <string name="saturday_short">S</string>
    <string name="save_button_label">SAVE</string>
    <string name="search_title">Search</string>
    <string name="show_all_restaurants_button_label">Show All Restaurants</string>
    <string name="sign_up_button_label">SIGN UP</string>
    <string name="sign_up_text">Don\'t have an account? Sign up!</string>
    <string name="signup_error_message">Please make sure you enter a username, password, and email address!</string>
    <string name="signup_error_title">Signup Error</string>
    <string name="subtitle">Never Go Hungry Again</string>
    <string name="subtitle_all_the_restaurants">All the Restaurants!</string>
    <string name="sunday_check_label">Sunday</string>
    <string name="sunday_short">S</string>
    <string name="thursday_check_label">Thursday</string>
    <string name="thursday_short">T</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_sign_up">Sign Up Activity</string>
    <string name="tuesday_check_label">Tuesday</string>
    <string name="tuesday_short">T</string>
    <string name="username_hint">Username</string>
    <string name="wednesday_check_label">Wednesday</string>
    <string name="wednesday_short">W</string>
    <string name="menu_logout_label">Logout</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Choose Picture</item>
    </string-array>
    <string-array name="category_array">
        <item>Choose a Category</item>
        <item>Chinese</item>
        <item>Japanese</item>
        <item>Korean</item>
        <item>Western</item>
    </string-array>

    <string name="recover_password_button_label">Recover Password</string>
    <string name="recover_password_subtitle">Enter your e-mail address</string>
    <string name="title_activity_password_recovery">Password Recovery</string>
    <string name="password_recovery_e_mail_sent">Password recovery e-mail sent!</string>
    <string name="invalid_e_mail">Invalid e-mail address</string>
    <string name="e_mail_not_found">E-mail address not found</string>
    <string name="menu_quit_label">Quit</string>
    <string name="recover_password_text">Forgot your password?</string>
    <string name="city_button_vancouver">Vancouver</string>
    <string name="city_button_taipei">Taipei</string>
    <string name="edit_text_hint_city">Enter City Name</string>
    <string name="restaurant_city_label">City</string>
    <string name="restaurant_city_hint">Enter City</string>
    <string name="toast_no_address">No Address Information</string>
    <string name="button_done_text">Done</string>

</resources>