<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/menu_search"
          android:title="@string/search_title"
          android:icon="@drawable/ic_action_previous_item"
          android:showAsAction="always"
          android:actionViewClass="android.widget.SearchView" />
    
    
   
    <item
        android:id="@+id/action_my_restaurants"
        android:title="@string/menu_my_restaurants_label">
    </item>
    <item
        android:id="@+id/action_all_restaurants"
        android:title="@string/menu_all_restaurants_label">
    </item>
     <item
        android:id="@+id/action_logout"
        android:title="@string/menu_logout_label">
    </item>
    <item
        android:id="@+id/menu_item_new_restaurant"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="always"
        android:title="@string/new_restaurant"/>

</menu>