<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_fill"
    android:orientation="vertical" >

    <ImageView style="@style/AuthBackgroundImage"
        android:contentDescription="@string/content_desc_background_image" />

    <TextView
        android:id="@+id/title"
        style="@style/AuthTitle" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@+id/title"
        android:gravity="center_horizontal"
        android:text="@string/main_fragment_subtitle"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" >

        <EditText
            android:id="@+id/searchField"
            style="@style/AuthEditText" 
            android:inputType="textNoSuggestions|textCapWords"/>

    </LinearLayout>
    <Button
        android:id="@+id/searchButton"
        style="@style/AuthButton"
        android:layout_below="@+id/editTextLayout"
        android:text="@string/search_title" />


</RelativeLayout>