<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_fill"
    android:orientation="vertical" >

    <ImageView
        style="@style/AuthBackgroundImage"
        android:layout_height="match_parent"
        android:contentDescription="@string/content_desc_background_image" />
    
    <TextView
        android:id="@+id/passwordRecoveryTitleText"
        style="@style/AuthTitle"/>
    
    <TextView
        android:id="@+id/passwordRecoverySubtitleText"
        android:layout_below="@id/passwordRecoveryTitleText"
        android:text="@string/recover_password_subtitle"
        style="@style/AuthSubtitle" />

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" 
        android:layout_below="@id/passwordRecoverySubtitleText">

        <EditText
            android:id="@+id/emailField"
            style="@style/AuthEditText"
            android:hint="example@gmail.com"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <Button
        android:id="@+id/recoverPasswordButton"
        style="@style/AuthButton"
        android:layout_below="@id/editTextLayout"
        android:text="@string/recover_password_button_label" />


</RelativeLayout>